--- a/Client/styles/main.css
+++ b/Client/styles/main.css
@@ -1,5 +1,6 @@
 /*CSS Styles for the entire website in general*/
-
+/*Font linking*/
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -12,6 +13,7 @@ header{
     height: 50px;
     position: fixed;
     z-index: 3;
+    
 }
 
 .spacer{
@@ -19,7 +21,7 @@ header{
     height: 100%;
     margin: 0 10%;
 
-    background-color:rgba(255, 255, 255, 0);
+    background-color: rgb(46, 45, 45);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -60,7 +62,7 @@ input{
     flex-direction: column;
     align-items: center;
     padding: 30px 5px;
-    background-color: whitesmoke;
+    background-color: rgb(46, 45, 45);
     border-radius: 20px;
     height: 75vh;
     width: 15%;
@@ -69,10 +71,32 @@ input{
     left: 10%;
 }
 
+
 .section{
+    display: flex;
+    font-family:'Anton', sans-serif;
+    font-size: 15px;
     height: 30px;
     width: 80%;
     margin: 10px;
     text-align: center;
     border-radius: 10px;
+    padding: 10px;
+}
+
+
+ion-icon {
+  font-size: 25px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.Pop-up {
+    position: fixed;
+    height: 100px;
+    width: 100px;
+    background-color: blue;
+    left: 50%;
+    top: 200px;
+    display: none;
 }
