--- a/Client/Login.css
+++ b/Client/Login.css
@@ -10,7 +10,7 @@ selection{
   align-items: center;
   min-height: 100vh;
   width: 100%;
- background: url(b.jpg) no-repeat;
+ background: url(p.jpg) no-repeat;
  background-position: center;
  background-size: cover;
 
@@ -109,20 +109,4 @@ button{
     font-size: 1em;
     font height: 500;
 
-}
-.register{
-    text-align: center;
-    font-size: .9em;
-    color: #fff;
-    margin: 25px 0 10px;
-    
-}
-.register p a{
-    text-decoration: none;
-    color: #fff;
-    font-style: 500;
-
-}
-.register p a:hover{
-    text-decoration: underline;
 }
