--- a/Client/styles/home.css
+++ b/Client/styles/home.css
@@ -1,57 +1,66 @@
 /*CSS Styles for Home Page only*/
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 nav{
-    background-color: whitesmoke;
+    background-color: #EAF0F0;
     font-family:'Anton', sans-serif;
     font-size: 15px;
-    width: 500px;
-    height: 30px;
-    border-radius: 20px;
+    width: 73%;
+    height: 70px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     position: relative;
-    top: 65px;
-    margin: 0 auto;
+    top: 50px;
+    margin-left: 73px;
 }
 
 nav ul li{
     display: inline-block;
     margin: 0 20px;
-    background-color: whitesmoke;
+    background-color: rgb(83, 141, 83);
+    border: solid;
+    width: 20%;
+    height: 35px;
+    text-align: center;
+    border-radius: 7px;
+    
 }
 
 nav ul{
-    background-color: whitesmoke;
+    background-color: inherit;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+
 }
 
 a{
     text-decoration: none;
     background-color: inherit;
-    color: black;
+    color: black;    
 }
 
 .prod-list{
-    width: 45%;
+    width: 60%;
     height: 100vh;
-    margin-left: 27%;
-    margin-top: 75px;
+    margin-left: 10%;
+    margin-top: 60px;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: space-evenly;
     align-content: flex-start;
+    
 }
 
 .order{
-    height: 75vh;
-    width: 15%;
+    height: 100vh;
+    width: 20%;
     position: fixed;
-    top:65px;
-    right: 10%;
+    top:0;
+    right: 0;
     background-color: whitesmoke;
     padding: 10px;
-    border-radius: 10px;
 }
 
 table{
