--- a/Client/styles/main.css
+++ b/Client/styles/main.css
@@ -4,10 +4,11 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: rgb(220, 216, 216);
+    background-color: rgb(237, 188, 171);
 }
 
 header{
+    display: none;
     width: 100%;
     background-color: whitesmoke;
     height: 50px;
@@ -62,13 +63,13 @@ input{
     flex-direction: column;
     align-items: center;
     padding: 30px 5px;
-    background-color: rgb(46, 45, 45);
-    border-radius: 20px;
-    height: 75vh;
-    width: 15%;
+    background-color: #FFFFFF;
+    height: 100vh;
+    width: 5%;
     position: fixed;
-    top:65px;
-    left: 10%;
+    top:0;
+    left: 0;
+    padding-top: 120px;
 }
 
 
@@ -82,14 +83,21 @@ input{
     text-align: center;
     border-radius: 10px;
     padding: 10px;
+    background-color: #FFFFFF;
+   
 }
-
 
 ion-icon {
   font-size: 25px;
   margin-left: 10px;
   margin-right: 10px;
+  background-color: inherit;
+  transition: 200ms;
 }
+ion-icon:hover{
+    color: rgb(255, 85, 0);
+}
+
 
 .Pop-up {
     position: fixed;
