--- a/Client/Login.css
+++ b/Client/Login.css
@@ -10,7 +10,7 @@ selection{
   align-items: center;
   min-height: 100vh;
   width: 100%;
- background: url(p.jpg) no-repeat;
+ background: url() no-repeat;
  background-position: center;
  background-size: cover;
 
