--- a/Client/styles/main.css
+++ b/Client/styles/main.css
@@ -8,25 +8,26 @@
 }
 
 header{
-    display: none;
+    height: 70px;
     width: 100%;
-    background-color: whitesmoke;
-    height: 50px;
+    background-color: #FFFFFF;
     position: fixed;
     z-index: 3;
-    
+    border-bottom: solid 1px rgb(220, 215, 215);
+    display: flex;
+    align-items: center;
 }
 
-.spacer{
+/* .spacer{
     width: 80%;
     height: 100%;
     margin: 0 10%;
 
-    background-color: rgb(46, 45, 45);
+    background-color: inherit;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+} */
 
 .item{
     height: 40px;
@@ -37,25 +38,49 @@ header{
 .logo{
     display: inline-block;
     height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    background-color: darkgray;
+    width: 95px;
+    background-color: inherit;
+    font-family: sans-serif;
+    font-size: 35px;
+    font-weight: 700;
+    margin-left: 20px;
 }
 
-.search{
+.logo span:nth-child(1){
+    background-color: inherit;
+    color: #3D8493;
+}
+
+.logo span:nth-child(2){
+    background-color: inherit;
+    color: #4A5C2F;
+}
+
+.logo span:nth-child(3){
+    background-color: inherit;
+    color: #D89F65;
+}
+
+/* .search{
     width: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
-}
+    background-color: inherit;
+} */
 
 input{
-    height: 70%;
-    width: 85%;
+    height: 45px;
+    width: 357px;
+    left: 198px;
+    top: 0px;
+    border-radius: 0px;
     border-radius: 10px;
-    margin: 10px;
+    margin-left: 100px;
     padding: 0 20px;
     border: none;
+    background-color: #ECF3F5;
+    
 }
 
 .side-bar{
