--- a/Client/styles/home.css
+++ b/Client/styles/home.css
@@ -5,13 +5,14 @@ nav{
     font-family:'Anton', sans-serif;
     font-size: 15px;
     width: 73%;
-    height: 70px;
+    height: 80px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    position: relative;
+    position: fixed;
     top: 50px;
     margin-left: 73px;
+    top: 70px;
 }
 
 nav ul li{
@@ -23,7 +24,7 @@ nav ul li{
     height: 35px;
     text-align: center;
     border-radius: 7px;
-    
+
 }
 
 nav ul{
@@ -37,7 +38,7 @@ nav ul{
 a{
     text-decoration: none;
     background-color: inherit;
-    color: black;    
+    color: black;
 }
 
 .prod-list{
