--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel ="stylesheet" href ="Login.css">
+        <link rel ="stylesheet" href ="/styles/Login.css">
         <title>Project</title>
     </head>
     <body>
