--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -8,7 +8,7 @@
         <selection>
         <div class ='LOGIN'>
             <div class="LOGIN-value">
-                <form action = " ">
+                <form action = "/" method="post" name="login">
                     <h2>Login</h2>
                     <div class="inputbox">
                         <ion-icon name="mail-outline"></ion-icon>
