--- a/public/styles/Login.css
+++ b/public/styles/Login.css
@@ -10,9 +10,7 @@ selection{
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    /* background: url() no-repeat; */
-    /* temporarily changed bg to black for better visibility */
-    background-color: black;
+    background: url('/images/p.jpg') no-repeat;
     background-position: center;
     background-size: cover;
 
