--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel ="stylesheet" href ="/styles/Login.css">
-        <title>Project</title>
+        <title>POS</title>
     </head>
     <body>
         <selection>
