updated order page

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -5,8 +5,218 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/order.css">
+
 </head>
 <body>
+    <header>
+        <div class="spacer">
+            <div class="logo item"></div>
+            <div class="search item">
+                <input type="text" placeholder="Search Products...">
+            </div>
+            <div class="account item"></div>
+        </div>
+    </header>
+    <div class="parent">
+
+        <!--Side Menu Bar-->
+        <div class="side-bar">
+            <div class="section"><ion-icon name="grid-outline"></ion-icon></div>
+            <div class="section"><ion-icon name="file-tray-stacked-outline"></ion-icon></div>
+            <div class="section"><ion-icon name="bag-handle-outline"></ion-icon></div>
+            <div class="section"> <ion-icon name="person-circle-outline"></ion-icon></div>
+        
+        </div>
+
+
+
+        <div class = "order-container">
+            <div class="orderbox">    
+                <div class="order">  
+                    <div style="border-bottom-left-radius: 30px;" class="order-box">
+                        <span  style="background-color: #EAF0F0;            
+                        border-top-left-radius: 15px;
+                        height: 5vh;
+                        "><p>ITEM</p></span>
+                        <span><p>CHICKEN</p></span>
+                        <span><p>SALAD</p></span>
+                        <span><p>CORNDOG</p></span>
+                    </div>
+
+                    <div style="border-bottom-right-radius: 30px; " class="order-box">
+                        <span style="background-color: #EAF0F0;
+                        border-top-right-radius: 15px;
+                        height: 5vh;"
+                        ><p>QTY</p></span>
+                        <span><p>1</p></span>
+                        <span><p>2</p></span>
+                        <span><p>3</p></span>
+                    </div>
+                </div>
+
+                <div class="buttons-box">
+                    <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
+                    <button style="margin-bottom: 20px;
+                    background-color: #8BB5BE;">MARK AS DONE</button>
+                </div>
+        </div>
+
+        <div class="orderbox">    
+            <div class="order">  
+                <div style="border-bottom-left-radius: 30px;" class="order-box">
+                    <span  style="background-color: #EAF0F0;            
+                    border-top-left-radius: 15px;
+                    height: 5vh;
+                    "><p>ITEM</p></span>
+                    <span><p>CHICKEN</p></span>
+                    <span><p>SALAD</p></span>
+                    <span><p>CORNDOG</p></span>
+                </div>
+
+                <div style="border-bottom-right-radius: 30px; " class="order-box">
+                    <span style="background-color: #EAF0F0;
+                    border-top-right-radius: 15px;
+                    height: 5vh;"
+                    ><p>QTY</p></span>
+                    <span><p>1</p></span>
+                    <span><p>2</p></span>
+                    <span><p>3</p></span>
+                </div>
+            </div>
+
+            <div class="buttons-box">
+                <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
+                <button style="margin-bottom: 20px;
+                background-color: #8BB5BE;">MARK AS DONE</button>
+            </div>
+    </div>
+
+    <div class="orderbox">    
+        <div class="order">  
+            <div style="border-bottom-left-radius: 30px;" class="order-box">
+                <span  style="background-color: #EAF0F0;            
+                border-top-left-radius: 15px;
+                height: 5vh;
+                "><p>ITEM</p></span>
+                <span><p>CHICKEN</p></span>
+                <span><p>SALAD</p></span>
+                <span><p>CORNDOG</p></span>
+            </div>
+
+            <div style="border-bottom-right-radius: 30px; " class="order-box">
+                <span style="background-color: #EAF0F0;
+                border-top-right-radius: 15px;
+                height: 5vh;"
+                ><p>QTY</p></span>
+                <span><p>1</p></span>
+                <span><p>2</p></span>
+                <span><p>3</p></span>
+            </div>
+        </div>
+
+        <div class="buttons-box">
+            <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
+            <button style="margin-bottom: 20px;
+            background-color: #8BB5BE;">MARK AS DONE</button>
+        </div>
+</div>
+
+<div class="orderbox">    
+    <div class="order">  
+        <div style="border-bottom-left-radius: 30px;" class="order-box">
+            <span  style="background-color: #EAF0F0;            
+            border-top-left-radius: 15px;
+            height: 5vh;
+            "><p>ITEM</p></span>
+            <span><p>CHICKEN</p></span>
+            <span><p>SALAD</p></span>
+            <span><p>CORNDOG</p></span>
+        </div>
+
+        <div style="border-bottom-right-radius: 30px; " class="order-box">
+            <span style="background-color: #EAF0F0;
+            border-top-right-radius: 15px;
+            height: 5vh;"
+            ><p>QTY</p></span>
+            <span><p>1</p></span>
+            <span><p>2</p></span>
+            <span><p>3</p></span>
+        </div>
+    </div>
+
+    <div class="buttons-box">
+        <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
+        <button style="margin-bottom: 20px;
+        background-color: #8BB5BE;">MARK AS DONE</button>
+    </div>
+</div>
+
+<div class="orderbox">    
+    <div class="order">  
+        <div style="border-bottom-left-radius: 30px;" class="order-box">
+            <span  style="background-color: #EAF0F0;            
+            border-top-left-radius: 15px;
+            height: 5vh;
+            "><p>ITEM</p></span>
+            <span><p>CHICKEN</p></span>
+            <span><p>SALAD</p></span>
+            <span><p>CORNDOG</p></span>
+        </div>
+
+        <div style="border-bottom-right-radius: 30px; " class="order-box">
+            <span style="background-color: #EAF0F0;
+            border-top-right-radius: 15px;
+            height: 5vh;"
+            ><p>QTY</p></span>
+            <span><p>1</p></span>
+            <span><p>2</p></span>
+            <span><p>3</p></span>
+        </div>
+    </div>
+
+    <div class="buttons-box">
+        <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
+        <button style="margin-bottom: 20px;
+        background-color: #8BB5BE;">MARK AS DONE</button>
+    </div>
+</div>
+
+<div class="orderbox">    
+    <div class="order">  
+        <div style="border-bottom-left-radius: 30px;" class="order-box">
+            <span  style="background-color: #EAF0F0;            
+            border-top-left-radius: 15px;
+            height: 5vh;
+            "><p>ITEM</p></span>
+            <span><p>CHICKEN</p></span>
+            <span><p>SALAD</p></span>
+            <span><p>CORNDOG</p></span>
+        </div>
+
+        <div style="border-bottom-right-radius: 30px; " class="order-box">
+            <span style="background-color: #EAF0F0;
+            border-top-right-radius: 15px;
+            height: 5vh;"
+            ><p>QTY</p></span>
+            <span><p>1</p></span>
+            <span><p>2</p></span>
+            <span><p>3</p></span>
+        </div>
+    </div>
+
+    <div class="buttons-box">
+        <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
+        <button style="margin-bottom: 20px;
+        background-color: #8BB5BE;">MARK AS DONE</button>
+    </div>
+</div>
+
+
     
+        </div>
+
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
