--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -12,12 +12,12 @@
                     <h2>Login</h2>
                     <div class="inputbox">
                         <ion-icon name="mail-outline"></ion-icon>
-                        <input type="email" required>
+                        <input type="text"  name="email" required>
                         <label for="">Email</label>
                     </div>
                     <div class="inputbox">
                         <ion-icon name="lock-closed-outline"></ion-icon>
-                        <input type="password" required>
+                        <input type="password"  name="password" required>
                         <label for="">Password</label>
                     </div>
                     <div class="forget">
