added functionality to sidebar

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,8 +1,8 @@
 <div class="side-bar">
-    <div class="section"><ion-icon name="grid-outline"></ion-icon></div>
-    <div class="section"><ion-icon name="file-tray-stacked-outline"></ion-icon></div>
-    <div class="section"><ion-icon name="bag-handle-outline"></ion-icon></div>
-    <div class="section"> <ion-icon name="person-circle-outline"></ion-icon></div>
+    <a href="menu"><div class="section"><ion-icon name="grid-outline"></ion-icon></div></a>
+    <a href="orders"><div class="section"><ion-icon name="file-tray-stacked-outline"></ion-icon></div></a>
+    <a href=""></a><div class="section"><ion-icon name="bag-handle-outline"></ion-icon></div>
+    <a href=""></a><div class="section"> <ion-icon name="person-circle-outline"></ion-icon></div>
 
 </div>
 
