--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -31,5 +31,8 @@
         </selection>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+        <script>
+            window.alert('username: admin123 \n password: 123456')
+        </script>
     </body>
 </html>
