--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,9 @@
                     <th>Amount</th>
                 </tr>
                 <tr>
+                    <!-- <% menu.forEach((item) => { %> 
+                        <td><%= JSON.stringify(item.prod_id) %></td> 
+                    <% }); %> -->
                     <td></td>
                     <td></td>
                     <td></td>
@@ -40,8 +43,12 @@
     </div>
     <div class = "Pop-up"><input type="button" value=" "></div>
     <!--Products Container-->
-    <div id="prod-list" class="prod-list"></div>
-    <script src="/script/script.js"></script>
+    <div id="prod-list" class="prod-list">
+        <% menu.forEach((item) => { %> 
+            <div class="products"><%= JSON.stringify(item.prod_name) %></div> 
+        <% }); %>
+    </div>
+    <!-- <script src="/script/script.js"></script> -->
 
     <!--linking Icons-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
