--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,6 +48,7 @@
             <div class="products">
                 <img src="/images/p.jpg" alt="">
                 <p><%= JSON.stringify(item.prod_name).toUpperCase().replace(/["]/g, '') %></p>
+                <button>ADD</button>
             </div> 
         <% }); %>
     </div>
