--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -3,14 +3,14 @@
 nav{
     background-color: #EAF0F0;
     font-family:'Quicksand', sans-serif;
-    font-size: 15px;
+    font-size: 1vw;
     width: 73%;
     height: 80px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     position: fixed;
-    top: 50px;
+    top: 70px;
     left: 78px;
     z-index: 10;
 }
@@ -50,13 +50,12 @@ color:white;
     width: 60%;
     height: 100vh;
     margin-left: 10%;
-    margin-top: 150px;
+    margin-top: 170px;
     display: flex;
-    flex-wrap: wrap;
     align-items: flex-start;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-content: flex-start;
-    
 }
 
 .order{
