--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10,6 +10,7 @@
 header{
     display: flex;
     width: 100%;
+    height: 70px;
     background-color: #FFFFFF;
     position: fixed;
     z-index: 3;
