--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -64,36 +64,41 @@ color:white;
     position: fixed;
     top:50px;
     right: 0;
-    background-color: whitesmoke;
+    background-color: #FFF;
+    border-left: solid gray;
     padding: 10px;
-    border-left: 1px solid #ECEDED;
+    border-left: solid 1px rgb(220, 215, 215);
 }
 .order h3{
     font-family: 'Quicksand', sans-serif;
     font-size: 25px;
-    margin-bottom: 20px;
-}
-
-table{
-    width: 100%;
-    min-height: 200px;
-    background-color: black;
-    
-}
-
-table th{
-    height: 20px;
-    background-color: white;
-}
-
-table td{
-    background-color: whitesmoke;
+    margin: 40px 0 0 0;
+    padding-bottom: 30px;
+    border-bottom: 2px dotted #A9A9A9;
 }
 
 h3{
     margin: 15px 0;
-    background-color: whitesmoke;
     text-align: center;
+}
+
+.order-list{
+    position: relative;
+    background-color: #EAF0F0;
+    width: 90%;
+    height: 70px;
+    border-radius: 14px;
+    margin: 10px auto;
+}
+
+.order-img{
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    height: 50px;
+    width: 50px;
+    border-radius: 5px;
 }
 
 .order button{
