user access page

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <%- include("./partials/head") %>
+    <link rel="stylesheet" href="/styles/access.css">
 </head>
 <body>
+
     <%- include("./partials/header") %>
+<div class="parent"></div>
     <%- include("./partials/sidebar") %>
+    
+    <div class="accessbox">
+<span>USER ID</span>
+<span>NAME</span>
+<span>MENU</span>
+    
+<span>ORDERS</span>
+<span>Sales</span>
+    </div>
+
+
+
+
+
+</div>
 </body>
 </html>
