--- a/views/test.ejs
+++ b/views/test.ejs
@@ -5,22 +5,95 @@
     <link rel="stylesheet" href="/styles/access.css">
 </head>
 <body>
-
-    <%- include("./partials/header") %>
-<div class="parent"></div>
-    <%- include("./partials/sidebar") %>
-    
-    <div class="accessbox">
-<span>USER ID</span>
-<span>NAME</span>
-<span>MENU</span>
-    
-<span>ORDERS</span>
-<span>Sales</span>
+    <div class="container-header">
+        <div>
+            <h1>MANAGE USERS</h1>
+        </div>
+        <div>
+            <button>SAVE</button>
+            <button>MANAGE</button>
+        </div>
     </div>
 
+    <%- include("./partials/header") %>
+<div class="parent">
+    <%- include("./partials/sidebar") %>
 
 
+    
+<table class="topbox">
+    <tr>
+        <th>USER ID</th>
+        <th>NAME</th>
+        <th>MENU</th>
+        <th>ORDERS</th>
+        <th>SALES</th>
+    </tr>
+    <tr>
+        <td>001</td>
+        <td>MACAWILI</td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+    </tr>
+    <tr>
+        <td>002</td>
+        <td>TEANO</td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+    </tr>
+    <tr>
+        <td>003</td>
+        <td>CANTOS</td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+    </tr>
+    <tr>
+        <td>004</td>
+        <td>ALEGRE</td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+    </tr>
+    <tr>
+        <td>005</td>
+        <td>GIGACHAD</td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+    </tr>
+    <tr>
+        <td>006</td>
+        <td>BATONG BAKAL</td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+    </tr>
+    <tr>
+        <td>007</td>
+        <td>TIGER</td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+    </tr>
+    <tr>
+        <td>008</td>
+        <td>SUMALMAL</td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+        <td><input type="checkbox" name=" " id=" "></td>
+    </tr>
+
+
+
+
+
+
+
+
+</table>
 
 
 </div>
