--- a/public/styles/access.css
+++ b/public/styles/access.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -16,7 +16,7 @@ header{
     display: flex;
     align-items: center;
     top: 0;
-}
+} 
 .spacer{
     width: 100%;
     height: 100%;
@@ -97,6 +97,10 @@ ion-icon {
 ion-icon:hover{
     color:  rgb(83, 141, 83);
     cursor: pointer;
+}  */
+
+*{
+    font-family: 'Quicksand';
 }
 .topbox{
     margin-top: 8%;
