--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <%- include("./partials/head") %>
     <link rel="stylesheet" href="/styles/home.css">
+    <link rel="stylesheet" href="/styles/popup.css">
 </head>
 <body>
     <%- include("./partials/header") %>
@@ -41,11 +42,25 @@
                 </div>
                 
                 <button onclick="resetOrder()" class="cancel-btn">CANCEL</button>
-                <button class="place-order-btn">PLACE ORDER</button>
+                <button class="place-order-btn Click-here">PLACE ORDER</button>
             </div>
         </div>
     </div>
-    <div class = "Pop-up"><input type="button" value=" "></div>
+    <!-- <div class = "Pop-up"><input type="button" value=" "></div> -->
+
+    <!-- POP UP BOX -->      
+    <div class="custom-model-main">
+        <div class="custom-model-inner">        
+        <div class="close-btn">×</div>
+            <div class="custom-model-wrap">
+                <div class="pop-up-content-wrap">
+                Content Here
+                </div>
+            </div>  
+        </div>  
+        <div class="bg-overlay"></div>
+    </div> 
+
     <!--Products Container-->
     <div id="prod-list" class="prod-list">
         <% menu.forEach((item) => { %> 
@@ -62,6 +77,7 @@
     <!--linking Icons-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="/script/popup.js"></script>
     <script>
         let order = [];
         const orderBox = document.querySelector('.order-child')
