--- a/public/styles/popup.css
+++ b/public/styles/popup.css
@@ -42,6 +42,7 @@
   .custom-model-wrap {
     display: block;
     width: 100%;
+    height: 50vh;
     position: relative;
     background-color: #fff;
     border: 1px solid #999;
